base/kubernetes/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-service
  namespace: home-assistant
  annotations:
    argocd.argoproj.io/hook: PreSync
    argocd.argoproj.io/sync-wave: "0"
spec:
  type: ExternalName
  externalName: 192.168.178.6
  ports:
    - port: 8123
      targetPort: 8123
