base/kubernetes/home-assistant/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-ingressroute
  namespace: home-assistant
  annotations:
    argocd.argoproj.io/hook: PreSync
    argocd.argoproj.io/sync-wave: "2"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`home.dawidde.de`)
    kind: Rule
    services:
    - name: home-assistant-service
      port: 8123
  tls:
    secretName: home-assistant-certificate-secret
